wxc/include/ewxw/wxc_glue.h


void       wxDynamicSashWindow_Delete( TSelf(wxDynamicSashWindow) _obj );

void*      wxDynamicSashWindow_GetHScrollBar( TSelf(wxDynamicSashWindow) _obj, TClass(wxWindow) child );

void*      wxDynamicSashWindow_GetVScrollBar( TSelf(wxDynamicSashWindow) _obj, TClass(wxWindow) child );


/* wxEditableListBox */
TClassDefExtend(wxEditableListBox,wxPanel)
TClass(wxEditableListBox) wxEditableListBox_Create( TClass(wxWindow) parent, int id, TStringVoid label, TRect(x,y,w,h), int style );

void*      wxEditableListBox_GetDelButton( TSelf(wxEditableListBox) _obj );

void*      wxEditableListBox_GetDownButton( TSelf(wxEditableListBox) _obj );

void*      wxEditableListBox_GetEditButton( TSelf(wxEditableListBox) _obj );

TClass(wxListCtrl) wxEditableListBox_GetListCtrl( TSelf(wxEditableListBox) _obj );

void*      wxEditableListBox_GetNewButton( TSelf(wxEditableListBox) _obj );

TArrayLen  wxEditableListBox_GetStrings( TSelf(wxEditableListBox) _obj, TArrayStringOutVoid _ref );

void*      wxEditableListBox_GetUpButton( TSelf(wxEditableListBox) _obj );

void       wxEditableListBox_SetStrings( TSelf(wxEditableListBox) _obj, void* strings, int _n );


/* wxLEDNumberCtrl */
TClassDefExtend(wxLEDNumberCtrl,wxControl)
TClass(wxLEDNumberCtrl) wxLEDNumberCtrl_Create( TClass(wxWindow) parent, int id, TRect(x,y,w,h), int style );

int        wxLEDNumberCtrl_GetAlignment( TSelf(wxLEDNumberCtrl) _obj );

int        wxLEDNumberCtrl_GetDrawFaded( TSelf(wxLEDNumberCtrl) _obj );

int        wxLEDNumberCtrl_GetValue( TSelf(wxLEDNumberCtrl) _obj, void* _ref );

void       wxLEDNumberCtrl_SetAlignment( TSelf(wxLEDNumberCtrl) _obj, int Alignment, int Redraw );

void       wxLEDNumberCtrl_SetDrawFaded( TSelf(wxLEDNumberCtrl) _obj, int DrawFaded, int Redraw );

void       wxLEDNumberCtrl_SetValue( TSelf(wxLEDNumberCtrl) _obj, void* Value, int Redraw );


/* wxMultiCellCanvas */
TClassDefExtend(wxMultiCellCanvas,wxFlexGridSizer)
void       wxMultiCellCanvas_Add( TSelf(wxMultiCellCanvas) _obj, TClass(wxWindow) win, int row, int col );

void       wxMultiCellCanvas_CalculateConstraints( TSelf(wxMultiCellCanvas) _obj );

TClass(wxMultiCellCanvas) wxMultiCellCanvas_Create( TClass(wxWindow) parent, int numRows, int numCols );

int        wxMultiCellCanvas_MaxCols( TSelf(wxMultiCellCanvas) _obj );

int        wxMultiCellCanvas_MaxRows( TSelf(wxMultiCellCanvas) _obj );

void       wxMultiCellCanvas_SetMinCellSize( TSelf(wxMultiCellCanvas) _obj, TSize(w,h) );


/* wxMultiCellItemHandle */
TClassDefExtend(wxMultiCellItemHandle,wxObject)
TClass(wxMultiCellItemHandle) wxMultiCellItemHandle_Create( int row, int column, int height, int width, int sx, int sy, int style, int wx, int wy, int align );

void*      wxMultiCellItemHandle_CreateWithSize( TSelf(wxMultiCellItemHandle) _obj, int row, int column, int sx, int sy, int style, int wx, int wy, int align );

void*      wxMultiCellItemHandle_CreateWithStyle( TSelf(wxMultiCellItemHandle) _obj, int row, int column, int style, int wx, int wy, int align );

int        wxMultiCellItemHandle_GetAlignment( TSelf(wxMultiCellItemHandle) _obj );

int        wxMultiCellItemHandle_GetColumn( TSelf(wxMultiCellItemHandle) _obj );

int        wxMultiCellItemHandle_GetHeight( TSelf(wxMultiCellItemHandle) _obj );

void       wxMultiCellItemHandle_GetLocalSize( TSelf(wxMultiCellItemHandle) _obj, TSizeOutVoid(_w,_h) );

int        wxMultiCellItemHandle_GetRow( TSelf(wxMultiCellItemHandle) _obj );

int        wxMultiCellItemHandle_GetStyle( TSelf(wxMultiCellItemHandle) _obj );

void       wxMultiCellItemHandle_GetWeight( TSelf(wxMultiCellItemHandle) _obj, TSizeOutVoid(_w,_h) );

int        wxMultiCellItemHandle_GetWidth( TSelf(wxMultiCellItemHandle) _obj );


/* wxMultiCellSizer */
TClassDefExtend(wxMultiCellSizer,wxSizer)
void       wxMultiCellSizer_CalcMin( TSelf(wxMultiCellSizer) _obj, TSizeOutVoid(_w,_h) );

TClass(wxMultiCellSizer) wxMultiCellSizer_Create( int rows, int cols );

void       wxMultiCellSizer_Delete( TSelf(wxMultiCellSizer) _obj );

int        wxMultiCellSizer_EnableGridLines( TSelf(wxMultiCellSizer) _obj, TClass(wxWindow) win );

void       wxMultiCellSizer_RecalcSizes( TSelf(wxMultiCellSizer) _obj );

int        wxMultiCellSizer_SetColumnWidth( TSelf(wxMultiCellSizer) _obj, int column, int colSize, int expandable );

int        wxMultiCellSizer_SetDefaultCellSize( TSelf(wxMultiCellSizer) _obj, TSize(w,h) );

int        wxMultiCellSizer_SetGridPen( TSelf(wxMultiCellSizer) _obj, TClass(wxPen) pen );

int        wxMultiCellSizer_SetRowHeight( TSelf(wxMultiCellSizer) _obj, int row, int rowSize, int expandable );


/* wxRemotelyScrolledTreeCtrl */
TClassDefExtend(wxRemotelyScrolledTreeCtrl,wxTreeCtrl)
void       wxRemotelyScrolledTreeCtrl_AdjustRemoteScrollbars( TSelf(wxRemotelyScrolledTreeCtrl) _obj );

void       wxRemotelyScrolledTreeCtrl_CalcTreeSize( TSelf(wxRemotelyScrolledTreeCtrl) _obj, TRectOutVoid(_x,_y,_w,_h) );

void       wxRemotelyScrolledTreeCtrl_CalcTreeSizeItem( TSelf(wxRemotelyScrolledTreeCtrl) _obj, void* id, TRectOutVoid(_x,_y,_w,_h) );

TClass(wxRemotelyScrolledTreeCtrl) wxRemotelyScrolledTreeCtrl_Create( void* _obj, void* _cmp, TClass(wxWindow) parent, int id, TRect(x,y,w,h), int style );

void       wxRemotelyScrolledTreeCtrl_Delete( TSelf(wxRemotelyScrolledTreeCtrl) _obj );

void*      wxRemotelyScrolledTreeCtrl_GetCompanionWindow( TSelf(wxRemotelyScrolledTreeCtrl) _obj );

int        wxRemotelyScrolledTreeCtrl_GetScrollPos( TSelf(wxRemotelyScrolledTreeCtrl) _obj, int orient );

TClass(wxScrolledWindow) wxRemotelyScrolledTreeCtrl_GetScrolledWindow( TSelf(wxRemotelyScrolledTreeCtrl) _obj );

void       wxRemotelyScrolledTreeCtrl_GetViewStart( TSelf(wxRemotelyScrolledTreeCtrl) _obj, TPointOutVoid(_x,_y) );

void       wxRemotelyScrolledTreeCtrl_HideVScrollbar( TSelf(wxRemotelyScrolledTreeCtrl) _obj );

void       wxRemotelyScrolledTreeCtrl_PrepareDC( TSelf(wxRemotelyScrolledTreeCtrl) _obj, TClass(wxDC) dc );

void       wxRemotelyScrolledTreeCtrl_ScrollToLine( TSelf(wxRemotelyScrolledTreeCtrl) _obj, int posHoriz, int posVert );

void       wxRemotelyScrolledTreeCtrl_SetCompanionWindow( TSelf(wxRemotelyScrolledTreeCtrl) _obj, void* companion );

void       wxRemotelyScrolledTreeCtrl_SetScrollbars( TSelf(wxRemotelyScrolledTreeCtrl) _obj, int pixelsPerUnitX, int pixelsPerUnitY, int noUnitsX, int noUnitsY, int xPos, int yPos, int noRefresh );


/* wxThinSplitterWindow */
TClassDefExtend(wxThinSplitterWindow,wxSplitterWindow)
TClass(wxThinSplitterWindow) wxThinSplitterWindow_Create( TClass(wxWindow) parent, int id, TRect(x,y,w,h), int style );

void       wxThinSplitterWindow_DrawSash( TSelf(wxThinSplitterWindow) _obj, TClass(wxDC) dc );

int        wxThinSplitterWindow_SashHitTest( TSelf(wxThinSplitterWindow) _obj, TPoint(x,y), int tolerance );

void       wxThinSplitterWindow_SizeWindows( TSelf(wxThinSplitterWindow) _obj );


/* wxTreeCompanionWindow */
TClassDefExtend(wxTreeCompanionWindow,wxWindow)
TClass(wxTreeCompanionWindow) wxTreeCompanionWindow_Create( TClass(wxWindow) parent, int id, TRect(x,y,w,h), int style );

void       wxTreeCompanionWindow_DrawItem( TSelf(wxTreeCompanionWindow) _obj, TClass(wxDC) dc, void* id, TRect(x,y,w,h));

TClass(wxTreeCtrl) wxTreeCompanionWindow_GetTreeCtrl( TSelf(wxTreeCompanionWindow) _obj );

void       wxTreeCompanionWindow_SetTreeCtrl( TSelf(wxTreeCompanionWindow) _obj, TClass(wxTreeCtrl) treeCtrl );